fixed issue with backspacing warnings

--- a/css/style.scss
+++ b/css/style.scss
@@ -168,6 +168,9 @@ a {
     }
   }
 }
+.form-control {
+  margin-bottom: 7px;
+}
 .modal-content {
   overflow: auto;
   padding-bottom: 15px;
